Added storyboard elements to search screen

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 MyArchive/MyArchive.xcodeproj/project.xcworkspace/xcuserdata/danielruiz.xcuserdatad/UserInterfaceState.xcuserstate
-e
+
+MyArchive/MyArchive.xcodeproj/project.xcworkspace/xcuserdata/bkhei.xcuserdatad/UserInterfaceState.xcuserstate
